@@ -2,7 +2,6 @@ plugins {
   id 'net.saliman.properties' version '1.5.2'
   id "application"
   id "jacoco"
-  id "org.sonarqube" version "6.0.1.5171"
   id 'com.gradleup.shadow' version '8.3.3'
   id 'maven-publish'
 }
@@ -10,27 +9,28 @@ plugins {
 configurations {
   // Defines only those dependencies that we want to include in the assembly/shadow jar that will be used by spark-submit.
   shadowDependencies
-}
 
-configurations.all {
-  // By default, Spark 3.5.3 does not include the log4j 1.x dependency via its zookeeper dependency. But somehow, by
-  // adding hadoop-client 3.3.4 to the mix, the log4j 1.x dependency comes via the zookeeper 3.6.3 dependency. Per
-  // the release notes at https://zookeeper.apache.org/doc/r3.6.4/releasenotes.html, using zookeeper 3.6.4 - which
-  // removes log4j 1.x, thus avoiding the major CVE associated with log4j 1.x - appears safe, which is confirmed by
-  // tests as well.
-  resolutionStrategy {
-    force "org.apache.zookeeper:zookeeper:3.6.4"
-  }
+  // Defines dependencies to be included in the Flux distribution (in addition to all normal runtime dependencies),
+  // but should not be transitive dependencies of the Flux API. Typically, a Flux API user can easily choose to include
+  // those transitive dependencies if desired.
+  distributionDependencies
+
+  // Since the distribution dependencies are included in Flux, we want to test them. So the test runtime includes all
+  // distribution dependencies.
+  testImplementation.extendsFrom(distributionDependencies)
 }
 
 dependencies {
-  implementation("org.apache.spark:spark-sql_2.12:3.5.3") {
-    // The rocksdbjni dependency weighs in at 50mb and so far does not appear necessary for our use of Spark.
-    exclude module: "rocksdbjni"
-  }
-
-  implementation "com.marklogic:marklogic-spark-connector:2.5.1"
+  implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
+  implementation "com.marklogic:marklogic-spark-connector:2.6.0"
   implementation "info.picocli:picocli:4.7.6"
+
+  // The shadow jar intended for usage with spark-submit needs the above "core" libraries as well, but not the Spark
+  // API since spark-submit provides that.
+  // Any other implementation dependencies below this are either provided by spark-submit or can be easily included
+  // with spark-submit via its support for downloading dependencies expressed by Maven coordinates.
+  shadowDependencies "com.marklogic:marklogic-spark-connector:2.6.0"
+  shadowDependencies "info.picocli:picocli:4.7.6"
 
   // Spark 3.4.3 depends on Hadoop 3.3.4, which depends on AWS SDK 1.12.262. As of August 2024, all public releases of
   // Spark - through 3.5.1 - depend on Hadoop 3.3.4 as well.
@@ -56,40 +56,15 @@ dependencies {
   implementation "org.apache.hadoop:hadoop-client:3.3.4"
 
   // Spark doesn't include Avro support by default, so need to bring this in.
-  implementation "org.apache.spark:spark-avro_2.12:3.5.3"
+  implementation "org.apache.spark:spark-avro_2.12:${sparkVersion}"
 
-  testImplementation("com.marklogic:marklogic-junit5:1.5.0") {
-    // Use the Java Client in the connector jar.
-    exclude module: "marklogic-client-api"
-  }
+  distributionDependencies "org.apache.tika:tika-parser-microsoft-module:${tikaVersion}"
+  distributionDependencies "org.apache.tika:tika-parser-pdf-module:${tikaVersion}"
 
-  // Used for tests involving JDBC. Spring JDBC greatly simplifies executing SQL queries.
-  testImplementation "org.springframework:spring-jdbc:5.3.39"
-  testImplementation "org.postgresql:postgresql:42.7.4"
+  testImplementation project(":flux-tests-api")
 
   // For testing custom commands with a 3rd party connector.
   testImplementation "com.databricks:spark-xml_2.12:0.18.0"
-
-  // For configuring two-way SSL in tests.
-  testImplementation("com.marklogic:ml-app-deployer:5.0.0") {
-    // Use the Java Client in the connector jar.
-    exclude module: "marklogic-client-api"
-  }
-
-  // Using Apache HttpClient for connecting to the MarkLogic Manage API.
-  testImplementation 'org.apache.httpcomponents:httpclient:4.5.14'
-  // Forcing HttpClient to use this to address https://snyk.io/vuln/SNYK-JAVA-COMMONSCODEC-561518 .
-  testImplementation 'commons-codec:commons-codec:1.17.1'
-
-  // The Gradle docs - https://docs.gradle.org/current/userguide/cross_project_publications.html#sec:simple-sharing-artifacts-between-projects -
-  // are not keen on this practice of depending on another project's configuration. But this seems fine for a test
-  // dependency, and testing has shown that Gradle will construct each project's shadowJar if it does not already exist.
-  testImplementation project(path: ":flux-embedding-model-minilm", configuration: "shadow")
-  testImplementation project(path: ":flux-embedding-model-azure-open-ai", configuration: "shadow")
-  testImplementation project(path: ":flux-embedding-model-ollama", configuration: "shadow")
-
-  shadowDependencies "com.marklogic:marklogic-spark-connector:2.5.1"
-  shadowDependencies "info.picocli:picocli:4.7.6"
 }
 
 javadoc {
@@ -132,9 +107,27 @@ distributions {
         include "libhadoop.so"
         into "lib/native"
       }
+      // The distributionDependencies configuration allows us to include dependencies that should be part of the Flux
+      // distribution, but not part of the default Flux API set of dependencies.
+      into("lib") {
+        from configurations.distributionDependencies
+        // It's expected to run into duplicates with dependencies already on the runtime classpath, so any duplicates
+        // can safely be excluded.
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+      }
     }
   }
 }
+
+tasks.register("deleteEmbeddingModelJars", Delete) {
+  delete fileTree("src/dist/ext").matching {
+    include "*.jar"
+  }
+}
+// We don't want to include the embedding model jars in the distribution zip, which greatly increases the size of the
+// zip. Users wishing to generate embeddings are required to download the appropriate jar and add it to the "ext"
+// folder in their Flux installation.
+distZip.dependsOn deleteEmbeddingModelJars
 
 tasks.register("copyEmbeddingModelJarsIntoDistribution", Copy) {
   description = "Intended for internal usage when building the Flux zip with all the embedding model integrations included."
@@ -217,35 +210,12 @@ buildToolForGettingStarted.dependsOn installDist
 
 test {
   finalizedBy jacocoTestReport
-  jvmArgs = [
-    // Needed for all Java 17 testing.
-    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
-
-    // For Spark's SerializationDebugger when using Java 17. See ReprocessTest for one example of why this is needed.
-    "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
-
-    // Needed by the JDBC tests.
-    "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
-
-    // Needed by CustomImportTest
-    "--add-opens", "java.base/java.io=ALL-UNNAMED",
-    "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED"
-  ]
 }
 
 jacocoTestReport {
   dependsOn test
   reports {
     xml.required = true
-  }
-}
-
-sonar {
-  properties {
-    property "sonar.projectKey", "flux"
-    property "sonar.host.url", "http://localhost:9000"
-    // Avoids a warning from Gradle.
-    property "sonar.gradle.skipCompile", "true"
   }
 }
 
